objects/CartItem.object
<CustomObject>
    <fields>
        <fullName>Shipping_Type__c</fullName>
        <description>Shipping Type for a cart item</description>
        <label>Shipping_Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ship To Me</fullName>
                </value>
                <value>
                    <fullName>Store PickUp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Store_Pickup_Address__c</fullName>
        <label>Store_Pickup_Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>eGift_Card_Amount__c</fullName>
        <label>eGift_Card_Amount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>eGift_Card_message__c</fullName>
        <label>eGift_Card_message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>eGift_Card_recipientEmail__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>eGift_Card_recipientEmail</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>